--- a/assets/Css/reset.css
+++ b/assets/Css/reset.css
@@ -2,10 +2,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    
+
 }
 
-/* html { */
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
@@ -48,14 +47,20 @@ h6 {
 
 a {
     text-decoration: none;
+    color: #fff;
 }
 
 p {
     margin-bottom: 3rem;
+    font-size: 1.8rem;
 }
 
 .main-content {
     max-width: 120rem;
     margin: 0 auto;
     padding: 8rem 3rem;
+}
+
+.bg-green {
+    background-color: #6F9147;
 }
