--- a/assets/Css/styles.css
+++ b/assets/Css/styles.css
@@ -1,128 +1,231 @@
 /* Inicio Menu */
 .menu {
-    position: fixed;
-    background-color:#6F9147;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    border-bottom:0.1rem solid #000;
-    z-index: 1;
+	position: fixed;
+	background-color: #fff;
+	top: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	border-bottom: 0.1rem solid #6F9147;
+	z-index: 1;
 }
 
 .menu-content {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-top: 0;
-    padding-bottom: 5px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	padding-top: 0;
+	padding-bottom: 5px;
 }
 
 .menu h1 {
-    font-size: 2.3rem;
+	font-size: 2.3rem;
 }
 
 .menu h1 a {
-    margin-left: 2rem;
-    color: #FDF8C1;
+	margin-left: 2rem;
+	color: #000;
 }
 
 .menu ul {
-    list-style: none;
-    display: flex;
+	list-style: none;
+	display: flex;
 }
 
-.menu ul li a{
-    display: block;
-    color: #FDF8C1;
-    padding: 2rem;
-    font-size: 1.8rem;
-    font-family: 'Montserrat', sans-serif; 
-    position: relative; 
+.menu ul li a {
+	display: block;
+	color: #000;
+	padding: 2rem;
+	font-size: 1.8rem;
+	font-family: 'Montserrat', sans-serif;
+	position: relative;
 }
 
-.menu ul li a::after{
-    content: '';
-    position: absolute;
-    bottom: 1rem;
-    left: 25%;
-    width: 0;
-    height: 0.2rem;
-    background:#FDF8C1;
-    transition: all 300ms ease-in-out;
+.menu ul li a::after {
+	content: '';
+	position: absolute;
+	bottom: 1rem;
+	left: 25%;
+	width: 0;
+	height: 0.2rem;
+	background: #6F9147;
+	transition: all 300ms ease-in-out;
 }
 
-.menu ul li a:hover::after{
-    width: 50%;
+.menu ul li a:hover::after {
+	width: 50%;
 }
 
 /* Fim Menu */
 
-.button-login {
-    width: 10rem;
-    background: #000;
-	color: #fff;
-	border: 1px solid #eee;
-	border-radius: 20px;
-	box-shadow: 5px 5px 5px #FDF8C1;
-	text-shadow: none;
+/* Inicio Seção home */
+#home {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.button-login:hover {
-    background: #FDF8C1;
-	color: #000;
-	border: 1px solid #eee;
-	border-radius: 20px;
-	box-shadow: 5px 5px 5px #000;
-	text-shadow: none;
+.slider {
+	margin: 0 auto;
+	width: 80rem;
+	height: 40rem;
+	overflow: hidden;
+	box-shadow: 0 1rem 3rem #000000;
+
 }
+
+.slides {
+	width: 400%;
+	height: 40rem;
+	display: flex;
+}
+
+.slides input {
+	display: none;
+}
+
+.slide {
+	width: 25%;
+	position: relative;
+	transition: 2s;
+}
+
+.slide img {
+	width: 100%;
+	height: 100%;
+}
+
+.manual-navigation {
+	position: absolute;
+	width: 80rem;
+	margin-top: -4rem;
+	display: flex;
+	justify-content: center;
+}
+
+.manual-btn {
+	border: 2px solid #fff;
+	padding: 5px;
+	border-radius: 1rem;
+	cursor: pointer;
+	transition: 1s;
+}
+
+.manual-btn:hover {
+	background-color: #fff;
+}
+
+.manual-btn:not(:last-child) {
+	margin-right: 4rem;
+}
+
+#radio1:checked~.first {
+	margin-left: 0;
+}
+
+#radio2:checked~.first {
+	margin-left: -25%;
+}
+
+#radio3:checked~.first {
+	margin-left: -50%;
+}
+
+#radio4:checked~.first {
+	margin-left: -75%;
+}
+
+.navigation-auto div {
+	border: 2px solid #fff;
+	padding: .5rem;
+	border-radius: 1rem;
+	cursor: pointer;
+	transition: 1s;
+}
+
+.navigation-auto {
+	position: absolute;
+	width: 80rem;
+	margin-top: 36rem;
+	display: flex;
+	justify-content: center;
+}
+
+.navigation-auto div:not(:last-child) {
+	margin-right: 4rem;
+}
+
+#radio1:checked~.navigation-auto .auto-btn1 {
+	background-color: #fff;
+}
+
+#radio2:checked~.navigation-auto .auto-btn2 {
+	background-color: #fff;
+}
+
+#radio3:checked~.navigation-auto .auto-btn3 {
+	background-color: #fff;
+}
+
+#radio4:checked~.navigation-auto .auto-btn4 {
+	background-color: #fff;
+}
+
+/* Fim Seção home */
+
 
 /* Inicio Seção Sobre */
+
 .section {
-    min-height: 100vh;
+	min-height: 100vh;
 }
 
 .intro-content {
-    position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1.5fr;
-    gap: 3rem;
-    min-height: 100vh;
+	position: relative;
+	display: grid;
+	grid-template-columns: 1fr 1.5fr;
+	gap: 3rem;
+	min-height: 100vh;
 }
 
-.intro-text, .intro-img {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
+.intro-text,
+.intro-img {
+	display: flex;
+	flex-flow: column wrap;
+	justify-content: center;
 }
 
 .intro-img img {
-    max-width: 100%;
-    height: auto;
+	max-width: 100%;
+	height: auto;
 }
 
 /* Fim seção sobre */
 
 /* Inicio seção galeria */
 .gallery-img {
-    width: 100%;
-    max-width: 36rem;
-    max-height: 36rem;
-    height: 360px;
-    overflow: hidden;
-    
-    
+	width: 100%;
+	max-width: 36rem;
+	max-height: 36rem;
+	height: 360px;
+	overflow: hidden;
+
+
 }
 
 .gallery-img img {
-    width: 100%;
-    height: 100%;
-    transition: all ease-in-out 300ms;
-    cursor: pointer;
+	width: 100%;
+	height: 100%;
+	transition: all ease-in-out 300ms;
+	cursor: pointer;
 }
 
 .container-img img:hover {
-    transform: translate(-5%,5%) scale(1.3) rotate(5deg);
+	transform: translate(-5%, 5%) scale(1.3) rotate(5deg);
 }
 
 /* Fim seção galeria */
@@ -130,121 +233,145 @@
 /* Inicio seção produtos */
 
 .button-products {
-    float: right;
-    margin-right: 100px;
-    background-color: #6F9147;
-    color: #FDF8C1;
-    padding: 10px;
-    border-radius: 100px;
+	float: right;
+	margin-right: 100px;
+	background-color: #6F9147;
+	color: #FDF8C1;
+	padding: 10px;
+	border-radius: 100px;
 }
 
 .button-products:hover {
-    background-color: #FDF8C1;
-    color: #6F9147;
+	background-color: #FDF8C1;
+	color: #6F9147;
 }
 
 /* Fim seção produtos */
 
 /* Inicio seção contato */
-.background-contact{
-    background-color: #FDF8C1;
-    background-size: cover;
-    background-position: center center;
-    color: #000;
+.background-contact {
+	background-color: #FDF8C1;
+	background-size: cover;
+	background-position: center center;
+	color: #000;
 }
 
 .contact-form {
-    grid-column: span 2;
+	grid-column: span 2;
 }
 
 .contact-form .form-grid {
-    border: none;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 3rem;
+	border: none;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	gap: 3rem;
 }
 
 .form-grid legend {
-    font-style: italic;
-    font-size: 3rem;
-    margin-bottom: 3rem;
+	font-style: italic;
+	font-size: 3rem;
+	margin-bottom: 3rem;
 }
 
 .form-group {
-    flex: 1 1 32rem;
+	flex: 1 1 32rem;
 }
 
 .form-group label {
-    display: block;
-    margin-bottom: 1rem;
+	display: block;
+	margin-bottom: 1rem;
 }
 
-.form-group input, .form-group textarea {
-    border: none;
-    background-color: #fff;
-    padding: 1.5rem 2rem;
-    width: 100%;
-    font-size: 2.5rem;
+.form-group input,
+.form-group textarea {
+	border: none;
+	background-color: #fff;
+	padding: 1.5rem 2rem;
+	width: 100%;
+	font-size: 2.5rem;
 }
 
-.form-group input:focus, .form-group textarea:focus {
-    box-shadow: 0 0 1rem 0.2rem #fff;
-} 
+.form-group input:focus,
+.form-group textarea:focus {
+	box-shadow: 0 0 1rem 0.2rem #fff;
+}
 
 body .full-width {
-    width: 100%;
-    flex: 1 1 100%;
+	width: 100%;
+	flex: 1 1 100%;
 }
 
 .form-group button {
-    border: 0.5rem solid #fff;
-    background: #000;
-    color: #fff;
-    padding: 1.5rem 2rem;
-    font-size: 2.5rem;
-    cursor: pointer;
-    transition: all 300ms ease-in-out;
+	border: 0.5rem solid #fff;
+	background: #000;
+	color: #fff;
+	padding: 1.5rem 2rem;
+	font-size: 2.5rem;
+	cursor: pointer;
+	transition: all 300ms ease-in-out;
 }
 
 .form-group button:hover {
-    background: #6F9147;
-    color: #fff;
+	background: #6F9147;
+	color: #fff;
 }
 
 .form-group ::placeholder {
-    color:#ccc;
+	color: #ccc;
 }
 
-input[type=number]::-webkit-inner-spin-button { 
-    -webkit-appearance: none;
-    
+input[type=number]::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+
 }
-input[type=number] { 
-   -moz-appearance: textfield;
-   appearance: textfield;
+
+input[type=number] {
+	-moz-appearance: textfield;
+	appearance: textfield;
 
 }
 
 /* Fim seção contato */
 
+/* Inicio footer */
+
 .footer {
-    text-align: center;
-    font-size: 1.6rem;
+	text-align: center;
+	font-size: 1.6rem;
 }
 
 .footer a {
-    color: var(--primary-color);
-    transition: all 300ms ease-in-out;
+	color: var(--primary-color);
+	transition: all 300ms ease-in-out;
 }
 
 .footer a:hover {
-    font-size: 2rem;
-    color: var(--primary-color);
-    font-weight:bold ;
+	font-size: 2rem;
+	color: var(--primary-color);
+	font-weight: bold;
 }
 
 .footer p {
-    margin: 0;
-    padding: 3rem;
+	margin: 0;
+	padding: 3rem;
+}
+
+/* Fim footer */
+
+/* Media queries */
+
+@media screen and (max-width: 900px) {
+	.slider {
+		width: 80%;
+	}
+
+	.slide img {
+		width: 100%;
+		height: 100%;
+	}
+
+	.manual-navigation, .navigation-auto {
+		width: 80%;
+	}
 }
