--- a/assets/Css/styles.css
+++ b/assets/Css/styles.css
@@ -60,13 +60,14 @@
 
 /* Inicio Seção home */
 #home {
-	margin: 0;
+	margin-top:50px;
 	padding: 0;
 	width: 100%;
 	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	
 }
 
 .slider {
