--- a/assets/Css/login.css
+++ b/assets/Css/login.css
@@ -1,10 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400");
 @import url("https://fonts.googleapis.com/css?family=Playfair+Display");
 
-body,
-.message,
-.form,
-form {
+body,.message,.form,form {
   display: flex;
   justify-content: center;
   align-items: center;
