--- a/assets/Css/login.css
+++ b/assets/Css/login.css
@@ -1,7 +1,14 @@
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400");
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display");
+/* @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400"); */
+/* @import url("https://fonts.googleapis.com/css?family=Playfair+Display"); */
 
-body,.message,.form,form {
+* {
+  box-sizing: unset;
+}
+
+body,
+.message,
+.form,
+form {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,14 +19,13 @@ body,.message,.form,form {
 body {
   height: 100vh;
   background: #e8e8e8;
-  font-family: "Source Sans Pro", sans-serif;
   overflow: hidden;
 }
 
 .container {
-  width: 700px;
-  height: 400px;
-  background: #9cda74;
+  width: 1000px;
+  height: 600px;
+  background: #6F9147;
   position: relative;
   display: grid;
   grid-template: 100%/50% 50%;
@@ -35,6 +41,7 @@ body {
   transform: translateX(100%);
   z-index: 4;
 }
+
 .message:before {
   position: absolute;
   content: "";
@@ -45,6 +52,7 @@ body {
   left: 0;
   top: 15%;
 }
+
 .message .button {
   margin: 5px;
 }
@@ -67,12 +75,14 @@ body {
   width: 100%;
   height: 100%;
 }
+
 .form--heading {
   font-size: 25px;
   height: 50px;
-  color: #4dfa4d;
+  color: #6F9147;
   font-family: "Source Sans Pro", sans-serif;
 }
+
 .form--signup {
   border-right: 1px solid #999;
 }
@@ -80,9 +90,11 @@ body {
 form {
   width: 70%;
 }
-form > * {
+
+form>* {
   margin: 10px;
 }
+
 form input {
   width: 90%;
   border: 0;
@@ -93,10 +105,12 @@ form input {
   letter-spacing: 0.11em;
   background-color: #f2eee3;
 }
+
 form input::placeholder {
   color: #333;
-  font-size: 10px;
+  font-size: 12px;
 }
+
 form input:focus {
   outline: 0;
   border-bottom: 1px solid rgba(128, 155, 206, 0.7);
@@ -113,8 +127,68 @@ form input:focus {
   font-weight: 400;
   position: relative;
   z-index: 3;
-  background: #67db67;
-  font-family: "Source Sans Pro", sans-serif;
+  background: #6F9147;
   cursor: pointer;
   border-radius: 5px;
+}
+
+form .social-links a {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background-color: #0c0707;
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #fff;
+  transition: all 0.5s ease;
+}
+
+form .social-links a:hover {
+  color: #000;
+  background-color: #fff;
+}
+
+@media screen and (max-width: 1000px) {
+  .container {
+    width: 80vw;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .form--heading {
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width:400px) {
+  .form--heading {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .form--signup {
+    overflow: hidden;
+  }
+
+  p {
+    font-size: 15px;
+  }
+
+  .social-links {
+    display: flex;
+    justify-content: center;
+    width: 25px;
+    height: 25px;
+
+  }
+
+  .button {
+    font-size: 12px;
+  }
 }
