--- a/assets/Css/reset.css
+++ b/assets/Css/reset.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
+    
 }
 
 html {
@@ -12,7 +12,7 @@ html {
 
 body {
     font-size: 2rem;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     line-height: 1.5;
     background-color: #fff;
 }
