--- a/assets/Css/responsividade.css
+++ b/assets/Css/responsividade.css
@@ -5,10 +5,13 @@
         bottom: 0;
         text-align: center;
     }
+
     .menu-content {
         height: 100vh;
     }
-    .menu-content, .menu-content ul{
+
+    .menu-content,
+    .menu-content ul {
         flex-direction: column;
         justify-content: center;
     }
@@ -44,39 +47,59 @@
 
     /* Sobre */
 
-    .intro-content, .main-content {
+    .intro-content,
+    .main-content {
         grid-template-columns: 1fr;
     }
-    
-    /* Slide */
-	.slider {
-		width: 100%;
-	}
 
-	.slide img {
-		width: 100%;
-		height: 100%;
-	}
+    /* Slide */
+    .slider {
+        width: 100%;
+    }
+
+    .slide img {
+        width: 100%;
+        height: 100%;
+    }
 
     .manual-navigation,
-	.navigation-auto {
-		width: 100%;
-	}
+    .navigation-auto {
+        width: 100%;
+    }
 }
 
-@media(max-width: 767px){
-	.footer-col{
-	  width: 50%;
-	  margin-bottom: 30px;
-  }
-  }
+@media(max-width: 767px) {
+    .grid {
+        grid-template-columns: 1fr;
+    }
+
+    .gallery-img {
+        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .gallery-img img {
+        width: 100%;
+    }
+
+    .footer-col {
+        width: 50%;
+        margin-bottom: 30px;
+    }
+}
 
 @media screen and (max-width:600px) {
+    .intro-img img {
+        display: none;
+    }
+
     .manual-navigation,
-	.navigation-auto {
+    .navigation-auto {
         width: 80%;
-	}
-    .footer-col{
+    }
+
+    .footer-col {
         width: 100%;
     }
 }
