--- a/assets/Css/styles.css
+++ b/assets/Css/styles.css
@@ -212,13 +212,53 @@
 /* Fim seção sobre */
 
 /* Inicio seção galeria */
+
+.grid-content {
+	display: flex;
+	flex-flow: column wrap;
+	justify-content: center;
+	min-height: 100vh;
+}
+
+.grid-main-heading {
+	margin-bottom: 1rem;
+}
+
+.grid-description {
+	padding-bottom: 5rem;
+}
+
+.grid {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 3rem;
+	counter-reset: grid-counter;
+}
+
+.grid h3 {
+	font-size: 2.5rem;
+	position: relative;
+	padding-left: 5rem;
+	padding-bottom: 2rem;
+}
+
+.grid h3::before {
+	counter-increment: grid-counter;
+	content: counter(grid-counter);
+	position: absolute;
+	font-size: 8rem;
+	font-style: italic;
+	top: -4rem;
+	left: -2rem;
+	transform: rotate(5deg);
+}
+
 .gallery-img {
 	width: 100%;
 	max-width: 36rem;
 	max-height: 36rem;
 	height: 360px;
 	overflow: hidden;
-
 
 }
 
@@ -229,7 +269,7 @@
 	cursor: pointer;
 }
 
-.container-img img:hover {
+.gallery-img img:hover {
 	transform: translate(-5%, 5%) scale(1.3) rotate(5deg);
 }
 
