--- a/assets/Css/styles.css
+++ b/assets/Css/styles.css
@@ -505,3 +505,22 @@ button:hover {
 .material-icons {
   vertical-align: middle; /* alinhamento vertical do ícone */
 }
+body {
+    background-color: #fff;
+    color: #333;
+  }
+  
+  button {
+    background-color: #007bff;
+    color: #fff;
+  }
+  
+  .dark-mode {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  .dark-mode button {
+    background-color: #fff;
+    color: #333;
+  }
