--- a/assets/Css/styles.css
+++ b/assets/Css/styles.css
@@ -474,7 +474,18 @@ ul {
 .footer-col .social-links a:hover {
 	color: #000;
 	background-color: #fff;
+	
 }
+#final {
+	text-align: center;
+	width: 100%;
+	height: 50px;
+	background-color: #333;
+	color: #fff;
+	padding: 20px;
+	position: fixed;
+	bottom: 0;
+  }
 
 /* Fim footer */
 button {
@@ -524,3 +535,4 @@ body {
     background-color: #fff;
     color: #333;
   }
+  
